--- a/avaliacoes/atividade4/styles.css
+++ b/avaliacoes/atividade4/styles.css
@@ -1,6 +1,6 @@
 html, body {
   background-color: rgb(167, 226, 236);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:  'Courier New', Courier, monospace;
   fonte-size: 20px;
 
 }  
@@ -16,14 +16,25 @@ a {
 nav#principal
  {
    
-   text-align: center;
+   text-align: left;
    background-color: rgb(124, 214, 236);
    border-width: 1px;
-   border-style: solid;
-   border-color: rgb(15, 15, 15);
-   height: 25px;
-   width: 300px;
-   box-shadow: 2px 1px 2px 1px black;
-   margin: auto;
+   height: 20px;
+   width: 33%;
    
 } 
+nav#principal:hover
+ {
+   
+   text-align: left;
+   background-color: rgb(20, 166, 192);
+   border-width: 1px;
+   height: 40px;
+   width: 50%;
+   
+} 
+a:hover {
+color:rgb(218, 17, 17);
+transition: all .30s;
+font-size: 25px;
+}
